syntax = "proto3";
package v0;
option go_package = "v0";

import "google/protobuf/any.proto";
import "validate/validate.proto";


message Header {
    string ApiVersion = 1;
    string Kind = 2;
    int32 Increment = 3;
}

message Witness {
    repeated Signature Signatures = 1;

}

message Signature {
    oneof Key {
        bytes PrimaryPublicKey = 1;
        bytes RecoveryPublicKey = 2;
    }
    bytes R = 3;
    bytes S = 4;
}

message Config {
    Header Header = 1 [(validate.rules).message.required = true];
    Witness Witness = 2 [(validate.rules).message.required = true];
    google.protobuf.Any Spec = 4 [(validate.rules).message.required = true];
}

